# MLB-ML-Predictor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml
.claude/: settings.local.json
app/: auth.py  daily_context.py  main.py  mlb_live.py  prediction_log.py  schemas.py  service.py
app/static/: style.css
app/templates/: admin.html  index.html  performance.html  unlock.html
data/: README.md
data/access/: keys.json  secret.txt
data/predictions/: log.csv
src/: auto_calibrate.py  config.py
src/adjustments/: __init__.py  bullpen.py  lineup.py  market.py  park_wind.py  statcast_pitcher.py  umpire.py  weights.py
src/analysis/: analyze_adjustments.py
src/betting/: edge.py
src/etl/: build_dataset.py  pybaseball_loader.py  retrosheet.py  starter_logs.py  statcast_cache.py  umpire_scraper.py  weather.py
src/features/: assemble.py  elo.py  park.py  pitcher.py  rolling.py  rolling_v2.py
src/mlb_predict.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: backtest.py  calibration.py  predict.py  train.py  train_v2.py
src/utils/: io.py  time_splits.py
tests/: test_betting.py  test_elo.py  test_predict.py  test_rolling.py
